feat: (back) add endpoint to get pets in a box
