# verseFactory_back/docs/openapi/openapi-admin-v1.yaml
@@ -201,6 +201,37 @@ paths:
           $ref: '#/components/responses/ForbiddenError'
         '404':
           $ref: '#/components/responses/NotFoundError'
+  /boxes/{id}/pets:
+    get:
+      tags:
+        - Box
+      summary: Get all pets in a box by ID
+      operationId: getPetsByBoxId
+      security:
+        - OAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PetDto'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+        '404':
+          $ref: '#/components/responses/NotFoundError'
+
 
 components:
   securitySchemes:
